# rustylang

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  Clippy.toml  README.md  fr-Fr.json  rust-toolchain.toml  rustfmt.toml  rustylang.example.toml
.cargo/: audit.toml
src/: cli.rs  config.rs  diff.rs  errors.rs  json_utils.rs  main.rs  openai_client.rs
